[package]
name = "fake_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
timer = "0"
event-listener = "2"
zbus = { version = "3" }
futures = "0"
async-std = {version = "1", features = ["attributes"]}
env_logger = "0.9.3"
log = "0.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter" , "fmt"], default-features = false }